# trollo-clone-rust

./: .gitignore  Cargo.toml  Dockerfile  Procfile  build_container.sh
migrations/2020-04-22-221502_create_schema/: down.sql  up.sql
src/: app_error.rs  config.rs  main.rs  model.rs  utils.rs  validation.rs
src/api/: board_api.rs  card_api.rs  lane_api.rs  mod.rs  user_api.rs
src/repository/: mod.rs  user_repository.rs
src/service/: authentication_service.rs  mod.rs  user_service.rs
