[package]
name = "trollo"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-service = "1.0.5"
actix-rt = "1.1.0"

env_logger = "0.7"
log="0.4.8"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0"
json = "0.12"

