[package]
name = "trollo"
version = "0.1.0"
authors = ["Kacper Marzecki <you@example.com>"]
edition = "2018"

[dependencies]

# Actix
actix-web = "2.0.0"
actix-service = "1.0.5"
actix-rt = "1.1.0"

# Db
sqlx = { version = "0.3.4", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid" ] }
diesel_migrations = "1.4.0"
diesel = {version = "1.4.4", features = ["postgres"]}


dotenv = "0.15.0"
env_logger = "0.7"
log="0.4.8"
lazy_static = "1.4"
envy = "0.4"

# serialization
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0"
json = "0.12"

# authentication
jsonwebtoken = "6"
bcrypt = "0.4.0"

chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

## Utils
#validation
validator = "0.10.0"
validator_derive = "0.10.0"

futures-util = "0.3.4"
derive_more = "0.99.5"
